--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -30,6 +30,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
+          file: ./Dockerfile 
           push: true
           tags: mill.jfrog.info:12451/test-docker/demo-app:latest
           
