--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          registry: mill.jfrog.info:12451
+          registry: hts2-akshathap-docker.jfrog.io
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
@@ -32,5 +32,5 @@ jobs:
           context: .
           file: ./Dockerfile 
           push: true
-          tags: mill.jfrog.info:12451/test-docker/demo-app:latest
+          tags: hts2-akshathap-docker.jfrog.io/akshathap-docker/demo-app:latest
           
