--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -18,6 +18,10 @@ jobs:
 
       - name: Setup Buildx
         uses: docker/setup-buildx-action@v3
+        with:
+          driver: docker-container
+          driver-opts: |
+            image=moby/buildkit:v0.27.0
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
